# quadcube-engine

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
apps/: CMakeLists.txt
apps/ecs-benchmark/: CMakeLists.txt  main.cpp
apps/game-demo/: CMakeLists.txt  main.cpp
apps/game-demo/configs_win/: camera_system.json  common_config.json  graphics_output_config.json  hid_system.json  render_system.json
apps/math-demo/: CMakeLists.txt  calculator_iface.hpp  calculator_impl.hpp  main.cpp  operations.hpp
apps/test-console/: CMakeLists.txt  main.cpp
cmake/: ConfigsUtils.cmake  ResourcesUtils.cmake
include/qce/: about.hpp  common.hpp  entity.hpp  error_codes.hpp  figures.hpp  identification.hpp  math.hpp  matrix.hpp  mesh.hpp  model.hpp  qce.hpp  render.hpp  transform.hpp  vector.hpp
include/qce/ancillary/: about.hpp  directories.hpp  error_codes.hpp  timer.hpp
include/qce/components/: camera.hpp  common.hpp  light.hpp  material.hpp  movement.hpp  transform.hpp
include/qce/configs/: camera_config.hpp  configs_description.h  configs_description.hpp  configs_traits.hpp  hid_config.hpp  movement_config.hpp  render_config.hpp
include/qce/ecs/: component.hpp  default_ecs_core.hpp  ecs.hpp  entity_manager.hpp  query_cache.hpp  systems_hub.hpp
include/qce/hid/: events.hpp  events_handler.hpp  win_events.hpp  win_gamepad.hpp
include/qce/math/: color.hpp  math.hpp  matrix.hpp  matrix_avx.hpp  matrix_avx2.hpp  matrix_avx512.hpp  matrix_def.hpp  matrix_sse2.hpp  vector.hpp  vector_avx.hpp  vector_avx2.hpp  vector_avx512.hpp  vector_def.hpp  vector_sse2.hpp
include/qce/math/impl/: matrix_avx2.hpp  matrix_avx512.hpp  matrix_def.hpp  matrix_sse2.hpp  vector_avx512.hpp  vector_sse2.hpp
include/qce/objects/: camera.hpp  camera_operator.hpp  command.hpp  entity.hpp  figures.hpp  identification.hpp  index.hpp  material.hpp  mesh.hpp  model.hpp  resource_manager.hpp  scene.hpp  shader.hpp  texture.hpp
include/qce/renders/: render_base.hpp  render_dx12.hpp  render_dx12_helpers.hpp  render_dx12_static_samplers.hpp  render_samplers.hpp  render_type.hpp  windows_output.hpp
include/qce/systems/: camera_system.hpp  hid_system.hpp  movement_system.hpp  render_system.hpp  transform_system.hpp
include/qce/transform/: movement.hpp  transform.hpp
shaders/: simple_color.hlsl
shaders/hlsl/: base_lighting.hlsl  common.hlsl  simple_ps.hlsl  simple_vs.hlsl
src/: about.cpp  camera.cpp  camera_operator.cpp  camera_system.cpp  figures.cpp  hid_system.cpp  movement_system.cpp  render_base.cpp  render_dx12.cpp  render_system.cpp  resource_manager.cpp  scene.cpp  texture.cpp  transform.cpp  windows_output.cpp
tests/: CMakeLists.txt
tests/ecs-test/: CMakeLists.txt  component-test.cpp  entity-test.cpp  query_cache-test.cpp
tests/math-test/: CMakeLists.txt  main.cpp  matrix_operations_conformance.cpp  matrix_operations_iface.hpp  matrix_operations_impl.hpp  matrix_operations_performance.cpp  vector_operations.hpp  vector_operations_conformance.cpp  vector_operations_def.cpp  vector_operations_iface.hpp  vector_operations_impl.hpp  vector_operations_performance.cpp  vector_operations_template.hpp
